--- a/faq/style.css
+++ b/faq/style.css
@@ -28,11 +28,13 @@ ul { list-style-type: none; }
 /* .faq_list .list{ border-top: 1px solid var(--border-line); border-bottom:  1px solid var(--border-line);} */
 .faq_list .list ul li {width: 700px;display: flex; align-items: center; border-top: 1px solid var(--border-line);}
 .faq_list .list ul li .q_box{width: 100%;height: 65px; padding: 20px 0;}
-.faq_list .list ul li .q_box a{font-size: 20px; font-weight: 600;}
+.faq_list .list ul li .q_box a{font-size: 20px; font-weight: 600; color:#000;}
 .faq_list .list ul li .q_box a span{margin-right: 20px;}
+.faq_list .list ul li .q_box a.f_green{color:var(--main-color);}
 .faq_list .list ul li .a_box{display: none; width:700px; height: auto; overflow: hidden; padding: 18px 40px;  border-top: 1px solid var(--border-line)}
 .faq_list .list ul li .a_box a{font-size: 20px; font-weight: 500;}
-.faq_list .list ul li .a_box.on{display: block;}
+
+/* .faq_list .list ul li .a_box.on{display: block;} */
 .faq_list .list ul li:last-child {border-bottom:  1px solid var(--border-line);}
 
 
